--- a/build.xml
+++ b/build.xml
@@ -2,12 +2,11 @@
 
 <property name="src" value="src" />
 //this is test command
-<target name="clean">
-	<echo message="We are in cleaning target........."/>
+
 	<delete file="bin/HelloWorld.class"/>
 	<delete dir="bin"/>
 	<delete dir="lib"/>
-
+</target>
 
 <target name="create" depends="clean">
 	<echo message="We are in creating target........."/>
