--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,9 @@
 <project name="myfirst1" basedir="." default="package">
 
 <property name="src" value="src" />
-//this is test command
 
+<target name="clean">
+	<echo message="We are in cleaning target........."/>
 	<delete file="bin/HelloWorld.class"/>
 	<delete dir="bin"/>
 	<delete dir="lib"/>
